# BestsellerStreaming

./: .env.example  .gitignore  README.md  justfile  pyproject.toml
assets/: diagram.excalidraw
databricks_notebooks/: folder.dbc
kafka-local/: docker-compose.yaml
root/: __main__.py
root/resources/: book_schema.avsc  kafka_config.json  kafka_config_dev.json  ny_times_config.json  test_config.json
root/src/: producer.py
root/src/api/: ny_times.py
root/src/utils/: __init__.py  read_config.py  schema_registry.py
root/tests/: test_api.py
terraform/: databricks.tf  eventhub.tf  providers.tf  resource_group.tf  storage.tf  variables.tf
